--- a/CryptoAlgCpp11/CryptoAlgCpp11.vcxproj.filters
+++ b/CryptoAlgCpp11/CryptoAlgCpp11.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="baseconvert.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="biglong.h">
